# nameutils

./: CHANGELOG  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/nameutils/: __init__.py  nameutils.py
tests/: test_nameutils.py
